Revert "removed stats, vs recorder"
This reverts commit f06cfdf21b38226283d3eed07e8d77d4f60a1ca7.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<a class="poke-link" onclick="clickLink(event)" href="#/trainers/"><button class="tab-select">Trainers</button></a>
 					<a class="poke-link" onclick="clickLink(event)" href="#/map/"><button class="tab-select">Map</button></a>
 					<span id="tab-select-right"></span>
+					<button class="tab-select vs-recorder-polling" id="update-vs-recorder" style="display:none;" onclick="updateVsRecorder()">Sync</button>
 					<button class="tab-select" onclick="setTab('settings')">Settings</button>
 				</div>
 				<div id="history"></div>
