--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta property="og:description" content="Emi's Crystal Kaizo+ Calc and Index">
 		<meta property="og:site_name" content="emi.dev">
 		<meta name="theme-color" content="#dc9eff">
-		<title>Emi's Crystal Kaizo+ Calc</title>
+		<title>Emi's Crystal Kaizo+ Kaizo Calc</title>
 		<link rel="stylesheet" href="https://fonts.bunny.net/css?family=Ubuntu+Mono:400,700&display=block">
 		<link rel="stylesheet" type="text/css" href="./style.css">
 		<style id="dynamic-style"></style>
