union cave trainers + r46 mons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1>Emi's Crystal Kaizo+ Calc</h1>
+			<h1>Emi's Crystal Kaizo+ Kaizo Calc</h1>
 			<div id="search" style="z-index: 100;">
 				<input id="search-box" type="search" placeholder="Search pokemon or encounters...">
 				<div id="search-suggestions">
