testing game selection interface

--- a/index.html
+++ b/index.html
@@ -345,6 +345,15 @@
 			<div id="drop-indicator"></div>
 			<div id="dragged"></div>
 		</div>
+		<div id="game-select-overlay">
+			<div id="game-select-modal">
+				<h2>Select Game Data</h2>
+				<div id="game-select-options">
+					<button class="game-select-btn" onclick="selectGame('data.json')">Crystal Kaizo+ Kaizo</button>
+					<button class="game-select-btn" onclick="selectGame('test.json')">Test Data</button>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="script/data.js"></script>
 	<script src="script/engine/engine.js"></script>
