save user data individually based on game

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<meta property="og:description" content="Emi's Crystal Kaizo+ Calc and Index">
 		<meta property="og:site_name" content="emi.dev">
 		<meta name="theme-color" content="#dc9eff">
-		<title>Emi's Crystal Kaizo+ Kaizo Calc</title>
+		<title>Emi's Calc</title>
 		<link rel="stylesheet" href="https://fonts.bunny.net/css?family=Ubuntu+Mono:400,700&display=block">
 		<link rel="stylesheet" type="text/css" href="./style.css">
 		<style id="dynamic-style"></style>
 	</head>
 	<body>
 		<div id="header">
-			<h1>Emi's Crystal Kaizo+ Kaizo Calc</h1>
+			<h1>Emi's Calc</h1>
 			<div id="search" style="z-index: 100;">
 				<input id="search-box" type="search" placeholder="Search pokemon or encounters...">
 				<div id="search-suggestions">
@@ -349,8 +349,8 @@
 			<div id="game-select-modal">
 				<h2>Select Game Data</h2>
 				<div id="game-select-options">
-					<button class="game-select-btn" onclick="selectGame('data.json')">Crystal Kaizo+ Kaizo</button>
-					<button class="game-select-btn" onclick="selectGame('test.json')">Test Data</button>
+					<button class="game-select-btn" onclick="selectGame('ck+k', 'data.json')">Crystal Kaizo+ Kaizo</button>
+					<button class="game-select-btn" onclick="selectGame('test', 'test.json')">Playtest Data</button>
 				</div>
 			</div>
 		</div>
