renamed some files

--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
 		</div>
 		<div id="game-select-overlay">
 			<div id="game-select-modal">
-				<h2>Select Game Data</h2>
+				<h2>Select Game</h2>
 				<div id="game-select-options">
-					<button class="game-select-btn" onclick="selectGame('ck+k', 'data.json')">Crystal Kaizo+ Kaizo</button>
-					<button class="game-select-btn" onclick="selectGame('test', 'test.json')">Playtest Data</button>
+					<button class="game-select-btn" onclick="selectGame('ck+k', 'ckk.json')">Crystal Kaizo+ Kaizo</button>
+					<button class="game-select-btn" onclick="selectGame('test', 'ckk-test.json')">Playtest Data</button>
 				</div>
 			</div>
 		</div>
