tewu crystal basic structure

--- a/index.html
+++ b/index.html
@@ -349,8 +349,9 @@
 			<div id="game-select-modal">
 				<h2>Select Game</h2>
 				<div id="game-select-options">
-					<button class="game-select-btn" onclick="selectGame('ck+k', 'ckk.json')">Crystal Kaizo+ Kaizo</button>
-					<button class="game-select-btn" onclick="selectGame('test', 'ckk-test.json')">Playtest Data</button>
+					<button class="game-select-btn" onclick="selectGame('ckk', 'ckk.json')">Crystal Kaizo+ Kaizo</button>
+					<button class="game-select-btn" onclick="selectGame('ckk-test', 'ckk-test.json')">CK+K Playtest Data</button>
+					<button class="game-select-btn" onclick="selectGame('tewu', 'tewu.json')">TeWu Crystal</button>
 				</div>
 			</div>
 		</div>
