--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 				<div id="game-select-options">
 					<button class="game-select-btn" onclick="selectGame('ckk', 'ckk.json')">Crystal Kaizo+ Kaizo</button>
 					<button class="game-select-btn" onclick="selectGame('ckk-test', 'ckk-test.json')">CK+K Playtest Data</button>
-					<button class="game-select-btn" onclick="selectGame('tewu', 'tewu.json')">TeWu Crystal</button>
+					<!-- <button class="game-select-btn" onclick="selectGame('tewu', 'tewu.json')">TeWu Crystal</button> -->
 				</div>
 			</div>
 		</div>
